updated vanta canvas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="vanta.rings.min.js"></script>
 <script>
 VANTA.RINGS({
-  el: "#your-element-selector",
+  el: "#vanta-canvas",
   mouseControls: true,
   touchControls: true,
   gyroControls: false,
@@ -17,4 +17,7 @@ VANTA.RINGS({
 </script>
 <title>Chuck's innocent website</title>
     </head>
+    <body><canvas style="position: absolute; z-index: 0; top: 0px; left: 0px; width: 1199px; height: 329px;" class="vanta-canvas" width="1798" height="493"></canvas>
+    
+    </body>
 </html>
