new stuff, no vanta

--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
 <html>
     <head>
-        <script src="three.r119.min.js"></script>
-<script src="vanta.rings.min.js"></script>
-<script>
-VANTA.RINGS({
-  el: "#vanta-canvas",
-  mouseControls: true,
-  touchControls: true,
-  gyroControls: false,
-  minHeight: 200.00,
-  minWidth: 200.00,
-  scale: 1.00,
-  scaleMobile: 1.00,
-  color: 0x6dff
-})
-</script>
+   
 <title>Chuck's innocent website</title>
     </head>
-    <body><canvas style="position: absolute; z-index: 0; top: 0px; left: 0px; width: 1199px; height: 329px;" class="vanta-canvas" width="1798" height="493"></canvas>
-    
+    <body>
+      <h1>Chuck's normal website.</h1>
+      
+
     </body>
 </html>
