--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
    
-<title>Chuck's innocent website</title>
+<title>Chuck's normal website</title>
     </head>
     <body>
+      
       <h1>Chuck's normal website.</h1>
 
     </body>
