added fancy looking stuff

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>Chuck's normal website</title>
     </head>
     <body>
-      
-      <h1>Chuck's normal website.</h1>
+
+      <div><h1>Chuck's Website!</h1></div>
 
     </body>
 </html>
