--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
 
-      <div><h1>Chuck's Website!</h1></div>
+      <div class="pixfont"><h1>Chuck's Website!</h1></div>
 
     </body>
 </html>
