--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
     <body>
 
-      <div class="pixfont"><h1>Chuck's Website!</h1></div>
+      <div class="pixfont"><h1>Chuck's Website!</h1>
+      <p>hey</p></div>
 
     </body>
 </html>
