--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
 
-      <div class="pixfont"><h1>Chuck's Website!</h1>
-      <p>hey</p></div>
+      <h1>Chuck's Website!</h1>
+      <p>hey</p>
 
     </body>
 </html>
