MORE font stuff

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>Chuck's normal website</title>
     </head>
     <body>
-
+      <div class="scn1">
       <h1>Chuck's Website!</h1>
       <p>hey</p>
-
+    </div>
     </body>
 </html>
